<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/applogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="@android:dimen/app_icon_size" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp" >

		 <Button
		     android:id="@+id/login"
		     android:layout_width="100dp"
		     android:layout_height="wrap_content"
		     android:layout_gravity="center_horizontal"
		     android:layout_marginRight="5dp"
		     android:onClick="makeTrip"
		     android:text="@string/userlogin" />
	
	    <Button
	        android:id="@+id/signup"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|left"
	        android:onClick="viewTrip"
	        android:text="@string/usersignup" />
	 </LinearLayout>

</LinearLayout>